objects/ASI_CRM_Holiday__c.object
<CustomObject>
    <description>Holidays for TW Visitation Plan</description>
    <fields>
        <fullName>ASI_CRM_Date_From_Month__c</fullName>
        <formula>CASE(MONTH( ASI_CRM_Date_From__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;,  
4, &quot;April&quot;,  
5, &quot;May&quot;,  
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (From) - Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_From_Year__c</fullName>
        <formula>TEXT(Year( ASI_CRM_Date_From__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (From) - Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_From__c</fullName>
        <label>Date (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_To_Month__c</fullName>
        <formula>CASE(MONTH( ASI_CRM_Date_To__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;,  
4, &quot;April&quot;,  
5, &quot;May&quot;,  
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (To) - Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_To_Year__c</fullName>
        <formula>TEXT(Year( ASI_CRM_Date_To__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (To) - Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_To__c</fullName>
        <label>Date (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Holiday_Type__c</fullName>
        <label>Holiday Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Personal Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <label>Holiday</label>
    <listViews>
        <fullName>ASI_CRM_KR_Holidays</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Holiday_Type__c</columns>
        <columns>ASI_CRM_Date_From__c</columns>
        <columns>ASI_CRM_Date_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Holiday__c.ASI_CRM_KR_Holiday</value>
        </filters>
        <label>All KR Holidays</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Field_Supervisor_Korea</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Holidays</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Holiday_Type__c</columns>
        <columns>ASI_CRM_Date_From__c</columns>
        <columns>ASI_CRM_Date_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Holiday__c.ASI_CRM_MY_Holiday</value>
        </filters>
        <label>All MY Holidays</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Holidays</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Date_From__c</columns>
        <columns>ASI_CRM_Date_To__c</columns>
        <columns>ASI_CRM_Holiday_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Holiday__c.ASI_CRM_TW_Holiday</value>
        </filters>
        <label>All TW Holidays</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_Holiday</fullName>
        <columns>ASI_CRM_Holiday_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_Date_From__c</columns>
        <columns>ASI_CRM_Date_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Holiday__c.ASI_CRM_VN_Holiday</value>
        </filters>
        <label>VN Holiday</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Holidays_2016</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Holiday_Type__c</columns>
        <columns>ASI_CRM_Date_From__c</columns>
        <columns>ASI_CRM_Date_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Holiday__c.ASI_CRM_KR_Holiday</value>
        </filters>
        <filters>
            <field>ASI_CRM_Date_From__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>ASI_CRM_Date_To__c</field>
            <operation>lessOrEqual</operation>
            <value>12/1/2016</value>
        </filters>
        <label>All KR Holidays_2016</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Field_Supervisor_Korea</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Holidays_2017</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Holiday_Type__c</columns>
        <columns>ASI_CRM_Date_From__c</columns>
        <columns>ASI_CRM_Date_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Holiday__c.ASI_CRM_KR_Holiday</value>
        </filters>
        <filters>
            <field>ASI_CRM_Date_From__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>ASI_CRM_Date_To__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>All KR Holidays_2018</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Field_Supervisor_Korea</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Holidays_20171</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Holiday_Type__c</columns>
        <columns>ASI_CRM_Date_From__c</columns>
        <columns>ASI_CRM_Date_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Holiday__c.ASI_CRM_KR_Holiday</value>
        </filters>
        <filters>
            <field>ASI_CRM_Date_From__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>ASI_CRM_Date_To__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2017</value>
        </filters>
        <label>All KR Holidays_2017</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Field_Supervisor_Korea</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_KR_Holiday</fullName>
        <active>true</active>
        <label>KR Holiday</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Holiday</fullName>
        <active>true</active>
        <label>MY Holiday</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Holiday</fullName>
        <active>true</active>
        <label>TW Holiday</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Holiday</fullName>
        <active>true</active>
        <label>VN Holiday</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>